adjust font-size so linebreaks on mobile are avoided

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -226,13 +226,9 @@ hr {
     line-height: 1.65;
     color: #a4ffd2;
   }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: 900;
+
+  h3 {
+    font-size: 1.5rem;
   }
   h6 {
     text-transform: uppercase;
